add hit buttons

--- a/app/views/physics/engine.handlebars
+++ b/app/views/physics/engine.handlebars
@@ -108,12 +108,18 @@
 		</div>
 	</div>
 </div>
-
-
 <div class="row">
 	<h4>Real Time Ball Position</h4>
 </div>
+<div class="row">
+	<div class="col-md-3">
+		<button class='btn btn-warning' id="btn-stop">Hit #1</button>
+		<button class='btn btn-warning' style="float: right;" id="btn-start-game">Hit #2</button>
+	</div>
+</div>
 
+<br/>
+<br/>
 <br/>
 
 
