--- a/app/views/physics/engine.handlebars
+++ b/app/views/physics/engine.handlebars
@@ -113,8 +113,8 @@
 </div>
 <div class="row">
 	<div class="col-md-3">
-		<button class='btn btn-warning' id="btn-stop">Hit #1</button>
-		<button class='btn btn-warning' style="float: right;" id="btn-start-game">Hit #2</button>
+		<button class='btn btn-warning' id="btn-hit-1">Hit #1</button>
+		<button class='btn btn-warning' style="float: right;" id="btn-hit-2">Hit #2</button>
 	</div>
 </div>
 
@@ -153,7 +153,9 @@
 		var sendObj = {
 			ball_samp_time: 0.00,
 			start_button: 0,
-			stop_button: 0
+			stop_button: 0,
+			hit_01: 0,
+			hit_02: 0
 		};
 
 
@@ -172,6 +174,22 @@
 				});
 
 		};
+
+		//sends a "hit" to the physics enginer
+		var sendPostHit = function () {
+			$.post("/physics/button/hit",
+				sendObj,
+				function (data, status) {
+					if (data.errCode === 0) {
+						//there is no error
+						window.location.href = "/physics"
+					} else {
+						//what to do with error ?
+					};
+				});
+
+		};
+
 
 		var sendPostGame = function () {
 			$.post("/physics/start",
@@ -212,6 +230,22 @@
 				sendObj.start_button = false;
 				sendObj.stop_button = true;
 				sendPost();
+			});
+			$(document.body).on("click", "#btn-hit-1", function () {
+				sendObj.ball_samp_time = $('#ball_samp_time').val();
+				sendObj.start_button = false;
+				sendObj.stop_button = false;
+				sendObj.hit_01 = 1;
+				sendObj.hit_02 = 0;
+				sendPostHit();
+			});
+			$(document.body).on("click", "#btn-hit-2", function () {
+				sendObj.ball_samp_time = $('#ball_samp_time').val();
+				sendObj.start_button = false;
+				sendObj.stop_button = true;
+				sendObj.hit_01 = 0;
+				sendObj.hit_02 = 1;
+				sendPostHit();
 			});
 			//			window.setTimeout( function() {
 			//				window.location.reload(true);
