--- a/app/views/physics/engine.handlebars
+++ b/app/views/physics/engine.handlebars
@@ -2,7 +2,7 @@
 
 -->
 <div id="varb-storage" data-time-started="{{time_started}}" data-samp-time="{{samp_time_ball}}" data-is-running="{{isRunning}}"
- data-time-stopped="{{time_stopped}}">
+ data-time-stopped="{{time_stopped}}" data-speed-fact="{{speed_up_fact}}" >
 
 </div>
 <br/>
@@ -105,6 +105,17 @@
 					</div>
 				</div>
 			</div>
+			<div class="col-md-6">
+				<div class="panel panel-primary">
+					<div class="panel-heading">Speed Up Fact</div>
+					<div class="panel-body">
+						<input style="width: 90%; margin: 5px 0px 5px 0px;" type="text" name="spd_up_fact" id="spd_up_fact" placeholder="sql upd time">
+						<!--
+					<h4 id="ball_samp_time"></h4>
+					-->
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
@@ -152,6 +163,7 @@
 		var global_Email_Id;
 		var sendObj = {
 			ball_samp_time: 0.00,
+			speed_up_fact: 0.00,
 			start_button: 0,
 			stop_button: 0,
 			hit_01: 0,
@@ -208,31 +220,38 @@
 
 
 		$(document).ready(function () {
-			var timeVal = $('#varb-storage').attr("data-samp-time")
+			var timeVal = $('#varb-storage').attr("data-samp-time");
+			var speedUpFact = $('#varb-storage').attr("data-speed-fact");
+
 			$('#ball_samp_time').val(timeVal);
+			$('#spd_up_fact').val(speedUpFact);
 			$(document.body).on("click", ".sendButton", function () {
 				sendImageClick(false);
 			});
 			$(document.body).on("click", "#btn-start-game", function () {
 				sendObj.ball_samp_time = $('#ball_samp_time').val();
+				sendObj.speed_up_fact = $('#spd_up_fact').val();
 				sendObj.start_button = true;
 				sendObj.stop_button = false;
 				sendPostGame();
 			});
 			$(document.body).on("click", "#btn-start", function () {
 				sendObj.ball_samp_time = $('#ball_samp_time').val();
+				sendObj.speed_up_fact = $('#spd_up_fact').val();
 				sendObj.start_button = true;
 				sendObj.stop_button = false;
 				sendPost();
 			});
 			$(document.body).on("click", "#btn-stop", function () {
 				sendObj.ball_samp_time = $('#ball_samp_time').val();
+				sendObj.speed_up_fact = $('#spd_up_fact').val();
 				sendObj.start_button = false;
 				sendObj.stop_button = true;
 				sendPost();
 			});
 			$(document.body).on("click", "#btn-hit-1", function () {
 				sendObj.ball_samp_time = $('#ball_samp_time').val();
+				sendObj.speed_up_fact = $('#spd_up_fact').val();
 				sendObj.start_button = false;
 				sendObj.stop_button = false;
 				sendObj.hit_01 = 1;
@@ -241,6 +260,7 @@
 			});
 			$(document.body).on("click", "#btn-hit-2", function () {
 				sendObj.ball_samp_time = $('#ball_samp_time').val();
+				sendObj.speed_up_fact = $('#spd_up_fact').val();
 				sendObj.start_button = false;
 				sendObj.stop_button = true;
 				sendObj.hit_01 = 0;
