look at buttons

--- a/app/views/physics/engine.handlebars
+++ b/app/views/physics/engine.handlebars
@@ -124,10 +124,10 @@
 </div>
 <div class="row">
 	<div class="col-md-3">
-		<button class='btn btn-warning' id="btn-hit-1">Hit #1</button>
-		<button class='btn btn-warning' style="float: right;" id="btn-hit-2">Hit #2</button>
-		<button class='btn btn-secondary' style="float: right;" id="btn-serve-1">Serve #1</button>
-		<button class='btn btn-secondary' style="float: right;" id="btn-serve-2">Serve #2</button>
+		<button class='btn btn-warning' style="float: left;" id="btn-hit-1">Hit #1</button>
+		<button class='btn btn-warning' style="float: left;" id="btn-hit-2">Hit #2</button>
+		<button class='btn btn-info' style="float: right;" id="btn-serve-2">Serve #2</button>
+		<button class='btn btn-info' style="float: right;" id="btn-serve-1">Serve #1</button>
 	</div>
 </div>
 
