hit ball function had error

--- a/app/views/users/mobile.handlebars
+++ b/app/views/users/mobile.handlebars
@@ -118,7 +118,7 @@
 
 		};
 
-		var hitBall() {
+		var hitBall = function() {
 			var userNum = parseInt($("#varb-storage").attr("data-user-num"));
 			sendObj.ball_samp_time = $('#ball_samp_time').val();
 			sendObj.speed_up_fact = $('#spd_up_fact').val();
