lockout the gyro for multiple hits

--- a/app/views/users/mobile.handlebars
+++ b/app/views/users/mobile.handlebars
@@ -69,6 +69,19 @@
 			place_ball_2: 0
 		};
 
+		var timerLockOutBit = false;
+		var timerLock;
+
+		var deviceRotat = {
+			rotX: 0,
+			rotY: 0,
+			rotZ: 0,
+			isValid: false,
+			isArmedX: false,
+			isArmedY: false
+		};
+
+
 
 
 		//sends a "hit" to the physics engine thru users
@@ -79,7 +92,8 @@
 					if (data.errCode === 0) {
 						//there is no error
 						var userNum = parseInt($("#varb-storage").attr("data-user-num"));
-						window.location.href = "/users/mobile/" + userNum;
+						//do I need to reload the page ?
+						//window.location.href = "/users/mobile/" + userNum;
 					} else {
 						//what to do with error ?
 					};
@@ -95,7 +109,8 @@
 					if (data.errCode === 0) {
 						//there is no error
 						var userNum = parseInt($("#varb-storage").attr("data-user-num"));
-						window.location.href = "/users/mobile/" + userNum;
+						//do I need to reload the page ?
+						//window.location.href = "/users/mobile/" + userNum;
 					} else {
 						//what to do with error ?
 					};
@@ -110,7 +125,8 @@
 					if (data.errCode === 0) {
 						//there is no error
 						var userNum = parseInt($("#varb-storage").attr("data-user-num"));
-						window.location.href = "/users/mobile/" + userNum;
+						//do I need to reload the page ???
+						//window.location.href = "/users/mobile/" + userNum;
 					} else {
 						//what to do with error ?
 					};
@@ -118,38 +134,43 @@
 
 		};
 
+		var clearTimer = function() {
+			console.log( "can hit again" );
+		};
+
 		var hitBall = function () {
-			if (navigator.vibrate) {
-				//vibratation is active
-				navigator.vibrate([200, 100, 200]);
-			};
-			var userNum = parseInt($("#varb-storage").attr("data-user-num"));
-			sendObj.ball_samp_time = $('#ball_samp_time').val();
-			sendObj.speed_up_fact = $('#spd_up_fact').val();
-			sendObj.start_button = false;
-			sendObj.stop_button = false;
-			sendObj.place_ball_1 = 0;
-			sendObj.place_ball_2 = 0;
-			if (userNum == 1) {
-				sendObj.hit_01 = 1;
-				sendObj.hit_02 = 0;
+			if (timerLockOutBit == false) {
+				console.log("lock out multiple hits");
+				timerLock =setTimeout( clearTimer, 3000);
+				timerLockOutBit = true;
+				if (navigator.vibrate) {
+					//vibratation is active
+					navigator.vibrate([200, 100, 200]);
+				};
+				var userNum = parseInt($("#varb-storage").attr("data-user-num"));
+				sendObj.ball_samp_time = $('#ball_samp_time').val();
+				sendObj.speed_up_fact = $('#spd_up_fact').val();
+				sendObj.start_button = false;
+				sendObj.stop_button = false;
+				sendObj.place_ball_1 = 0;
+				sendObj.place_ball_2 = 0;
+				if (userNum == 1) {
+					sendObj.hit_01 = 1;
+					sendObj.hit_02 = 0;
+				} else {
+					sendObj.hit_01 = 0;
+					sendObj.hit_02 = 1;
+				};
+				sendPostHit();
 			} else {
-				sendObj.hit_01 = 0;
-				sendObj.hit_02 = 1;
+				//keep resetting the 
+				deviceRotat.isArmedX = false;
+				deviceRotat.isArmedY = false;
 			};
-			sendPostHit();
 		};
 
 		$(document).ready(function () {
 			//for device orientation
-			var deviceRotat = {
-				rotX: 0,
-				rotY: 0,
-				rotZ: 0,
-				isValid: false,
-				isArmedX: false,
-				isArmedY: false
-			};
 
 			//set up vibration
 			navigator.vibrate = navigator.vibrate || navigator.webkitVibrate || navigator.mozVibrate || navigator.msVibrate;
