--- a/app/views/schedule/main.handlebars
+++ b/app/views/schedule/main.handlebars
@@ -51,8 +51,8 @@
 				<p>Clicking "Delete" will delete this entry</p>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-danger">Delete</button>
-				<button type="button" class="btn btn-secondary close-modal" data-dismiss="modal">Exit</button>
+				<button type="btn-lrg" class="btn btn-danger btn-lg">Delete</button>
+				<button type="btn-lrg" class="btn btn-secondary btn-lg close-modal" data-dismiss="modal">Exit</button>
 			</div>
 		</div>
 	</div>
