--- a/app/views/index.handlebars
+++ b/app/views/index.handlebars
@@ -1,16 +1,17 @@
-<div class='row'>
-    <h2>Welcome to</h2>
-    <h1 class='specialFont'>Pong 2180 - Physics Engine</h1>
-</div>
-<div class='row'>
-    <p><span class='specialFont'>Pong 2180</span> physics engine</p>
-    <hr>
-    <p>This program must be running in order for the game to operate. 
-        This app does all the calculations on the ball travel.
-     </p>
-    <hr>
-    <p></p>
-    <hr>
-</div>
+
+    <div class='row'>
+        <h2>Pong</h2>
+        <h1 class='specialFont'>Pong 2180 - Physics Engine</h1>
+    </div>
+    <div class='row'>
+        <p>
+            <span class='bungeeFont'>Pong 2180</span> physics engine</p>
+        <hr>
+        <p>This program must be running in order for the game to operate. This app does all the calculations on the ball travel.
+        </p>
+        <hr>
+        <p></p>
+        <hr>
+    </div>
 <hr>
 <hr>
