--- a/app/views/users/mobile.handlebars
+++ b/app/views/users/mobile.handlebars
@@ -33,7 +33,7 @@
         }
 
         body {
-            background-image: url('./images/matrixgridfloor.png');
+            background-image: url('../../images/matrixgridfloor.png');
         }
 
        .monotonFont {
