--- a/app/views/admin/login.handlebars
+++ b/app/views/admin/login.handlebars
@@ -5,6 +5,20 @@
  defer></script>
 <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
 
+<style>
+	header {
+		color: white;
+		background-image: linear-gradient(180deg, rgba(224, 133, 14, 1), rgba(173, 52, 62, 1));
+	}
+
+	body {
+		background-image: url('matrixgridfloor.png');
+	}
+
+	.monotonFont {
+		font-family: 'Monoton', cursive;
+	}
+</style>
 
 
 <h2> Admin login for Pong 2108 </h2>
