clean up admin controller
physics controller is next

--- a/app/views/admin/adminlist.handlebars
+++ b/app/views/admin/adminlist.handlebars
@@ -21,7 +21,7 @@
 </style>
 
 
-<h2> Users Listing </h2>
+<h2> Administrators List </h2>
 <button class='btn btn-primary' id="btn-log">Audit Log</button>
 <button class='btn btn-primary btn-users' id="btn-users">User List</button>
 <button class='btn btn-primary btn-users' id="btn-add">Add User</button>
