--- a/app/views/physics/engine.handlebars
+++ b/app/views/physics/engine.handlebars
@@ -111,6 +111,7 @@
 	<h4>Real Time Ball Position</h4>
 </div>
 
+
 <div class="col-md-12">
 	<div class="row">
 	</div>
@@ -131,10 +132,33 @@
 	<div class="col-md-12">
 		<button class='jumbotron btn btn-warning' style="font-size: 20px" style="float: left;" id="btn-hit-1">Hit #1</button>
 		<button class='jumbotron btn btn-warning' style="font-size: 20px" style="float: left;" id="btn-hit-2">Hit #2</button>
-		<button class='jumbotron btn btn-info' style="font-size: 20px" style="float: left;" id="btn-serve-2">Serve #2</button>
 		<button class='jumbotron btn btn-info' style="font-size: 20px" style="float: left;" id="btn-serve-1">Serve #1</button>
+		<button class='jumbotron btn btn-info' style="font-size: 20px" style="float: left;" id="btn-serve-2">Serve #2</button>
 	</div>
 </div>
+<br/>
+
+
+<div class="row">
+	<!-- split remaining column into 2 -->
+	<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+		<input style="width: 90%; margin: 5px 0px 5px 0px;" type="text" name="play-1-addr" id="play-1-addr" placeholder="player 1 address">
+	</div>
+	<div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
+		<button class='btn-large btn-warning' style="float: right; margin: 5px;" id="btn-addr-1">send</button>
+	</div>
+</div>
+
+<div class="row">
+	<!-- split remaining column into 2 -->
+	<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+		<input style="width: 90%; margin: 5px 0px 5px 0px;" type="text" name="play-2-addr" id="play-2-addr" placeholder="player 2 address">
+	</div>
+	<div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
+		<button class='btn-large btn-warning' style="float: right; margin: 5px;" id="btn-addr-2">send</button>
+	</div>
+</div>
+
 
 <br/>
 <br/>
@@ -178,6 +202,19 @@
 			place_ball_1: 0,
 			place_ball_2: 0
 		};
+		var sendObj2 = {
+			ball_samp_time: 0.00,
+			speed_up_fact: 0.00,
+			game_id: 0,
+			play_num: 0,
+			isAddrChange: false,
+			addrString: "",
+			isGeoChange: false,
+			geo_loc: {
+				lat: 0.0,
+				lon: 0.0
+			}
+		};
 
 
 
@@ -193,8 +230,22 @@
 						//what to do with error ?
 					};
 				});
-
 		};
+
+		//sends an address / game-change to the physics enginer
+		var sendPostAddr = function () {
+			$.post("/physics/game-change",
+				sendObj2,
+				function (data, status) {
+					if (data.errCode === 0) {
+						//there is no error
+						//window.location.href = "/physics"
+					} else {
+						//what to do with error ?
+					};
+				});
+		};
+
 
 		//sends a "hit" to the physics enginer
 		var sendPostHit = function () {
@@ -203,12 +254,11 @@
 				function (data, status) {
 					if (data.errCode === 0) {
 						//there is no error
-						window.location.href = "/physics"
+						//window.location.href = "/physics"
 					} else {
 						//what to do with error ?
 					};
 				});
-
 		};
 
 		//sends a "hit" to the physics enginer
@@ -218,12 +268,11 @@
 				function (data, status) {
 					if (data.errCode === 0) {
 						//there is no error
-						window.location.href = "/physics"
+						//window.location.href = "/physics"
 					} else {
 						//what to do with error ?
 					};
 				});
-
 		};
 
 		var sendPostGame = function () {
@@ -311,6 +360,26 @@
 				sendObj.place_ball_1 = 0;
 				sendObj.place_ball_2 = 1;
 				sendPostServe();
+			});
+			$(document.body).on("click", "#btn-addr-1", function () {
+				var addrStr = $("#play-1-addr").val()
+				sendObj2.ball_samp_time = $('#ball_samp_time').val();
+				sendObj2.speed_up_fact = $('#spd_up_fact').val();
+				sendObj2.game_id = 1;
+				sendObj2.play_num = 1;
+				sendObj2.isAddrChange = true;
+				sendObj2.addrString = addrStr;
+				sendObj2.isGeoChange = false;
+				sendPostAddr();
+			});
+			$(document.body).on("click", "#btn-addr-2", function () {
+				sendObj2.ball_samp_time = $('#ball_samp_time').val();
+				sendObj2.speed_up_fact = $('#spd_up_fact').val();
+				sendObj2.game_id = 1;
+				sendObj2.play_num = 2;
+				sendObj2.isAddrChange = true;
+				sendObj2.isGeoChange = false;
+				sendPostAddr();
 			});
 			//			window.setTimeout( function() {
 			//				window.location.reload(true);
