fixed moving the player and iframe on mobile
added in iframe on mobile, try to toggle it on and off later

--- a/app/views/users/mobile.handlebars
+++ b/app/views/users/mobile.handlebars
@@ -31,6 +31,11 @@
 		</div>
 	</div>
 
+	<div id="div-full-stats" >
+		<iframe src="https://richbu.github.io/Pong2180_user_demo/" width="490px" height="1095px" >
+		</iframe>
+	</div>
+
 	<style>
 		header {
 			color: white;
