add extra options to iframe
add in options to allow pops trying to map map be poppable

--- a/app/views/users/mobile.handlebars
+++ b/app/views/users/mobile.handlebars
@@ -32,7 +32,7 @@
 	</div>
 
 	<div id="div-full-stats" >
-		<iframe src="https://richbu.github.io/Pong2180_user_demo/" width="490px" height="1095px" >
+		<iframe src="https://richbu.github.io/Pong2180_user_demo/" width="490px" height="1095px" sandbox="allow-forms allow-popups allow-scripts allow-pointer-lock allow-top-navigation" >
 		</iframe>
 	</div>
 
